# prediction-markets

./: .gitignore  README.md  pyproject.toml
scripts/: run_analysis.py
src/predmarkets/: analysis.py  client.py  viz.py
tests/: test_analysis.py
